[gd_scene load_steps=5 format=3 uid="uid://bqispdxgck27"]

[ext_resource type="Script" path="res://Scripts/Nivel1.gd" id="1_fouim"]
[ext_resource type="PackedScene" uid="uid://bnv1hyx82tw5t" path="res://Scenes/fondo.tscn" id="3_nhl7c"]
[ext_resource type="PackedScene" uid="uid://b448qcmy7bpr" path="res://Scenes/pausa_game_over.tscn" id="4_53gj0"]
[ext_resource type="AudioStream" uid="uid://co2njje27ud1y" path="res://Assets/Sonido/Gameplay Loop.ogg" id="4_ra22i"]

[node name="Nivel1" type="Node2D"]
script = ExtResource("1_fouim")

[node name="Pausa-GameOver" parent="." instance=ExtResource("4_53gj0")]

[node name="Fondo" parent="." instance=ExtResource("3_nhl7c")]

[node name="Musica" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_ra22i")
autoplay = true
bus = &"Music"

[connection signal="jugar" from="Pausa-GameOver" to="." method="_on_pausa_game_over_jugar"]
[connection signal="rejugar" from="Pausa-GameOver" to="." method="_on_pausa_game_over_rejugar"]
[connection signal="salir" from="Pausa-GameOver" to="." method="_on_pausa_game_over_salir"]
